--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,12 +5,21 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v2
+        with:
+          ref: '5c9234b'
       - run: |
           sudo apt update
           sudo apt install build-essential -y
           sudo apt install qtbase5-dev qt5-qmake libmpv-dev zlib1g-dev -y
       - run: qmake build.pro
       - run: make -j $(nproc)
+
+      - name: Upload 
+        uses: actions/upload-artifact@main
+        with:
+          name: test
+          path: ./
+
       - run: make install INSTALL_ROOT=AppDir
       - run: |
           wget https://github.com/linuxdeploy/linuxdeploy/releases/download/continuous/linuxdeploy-x86_64.AppImage
@@ -19,8 +28,4 @@ jobs:
       - run: ./linuxdeploy-x86_64.AppImage --appdir AppDir --plugin qt
       - run: ls -al
 
-      - name: Upload 
-        uses: actions/upload-artifact@main
-        with:
-          name: test
-          path: ./linuxdeploy-x86_64.AppImage
+
