--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,16 +9,10 @@ jobs:
           ref: '5c9234bce550cc29ca82552244dc109018388264'
       - run: |
           sudo apt update
-          sudo apt install build-essential -y
+          sudo apt install build-essential libfuse2 -y
           sudo apt install qtbase5-dev qt5-qmake libmpv-dev zlib1g-dev -y
       - run: qmake build.pro
       - run: make -j $(nproc)
-
-      - name: Upload 
-        uses: actions/upload-artifact@main
-        with:
-          name: test
-          path: ./
 
       - run: make install INSTALL_ROOT=AppDir
       - run: |
@@ -28,4 +22,8 @@ jobs:
       - run: ./linuxdeploy-x86_64.AppImage --appdir AppDir --plugin qt
       - run: ls -al
 
-
+      - name: Upload 
+        uses: actions/upload-artifact@main
+        with:
+          name: test
+          path: ./*.AppImage
