--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,11 +19,12 @@ jobs:
           wget https://github.com/linuxdeploy/linuxdeploy/releases/download/continuous/linuxdeploy-x86_64.AppImage
           wget https://github.com/linuxdeploy/linuxdeploy-plugin-qt/releases/download/continuous/linuxdeploy-plugin-qt-x86_64.AppImage
           chmod +x linuxdeploy*.AppImage
-      - run: ./linuxdeploy-x86_64.AppImage --appdir AppDir --plugin qt
-      - run: ls -al
+          sed -i 's!/usr/share/pixmaps/!!g' kikoplay.desktop
+      - run: ./linuxdeploy-x86_64.AppImage --appdir AppDir --plugin qt -e AppDir/usr/bin/KikoPlay -i kikoplay.png -d kikoplay.desktop
+      - run: ls -al && rm linuxdeploy*.AppImage
 
       - name: Upload 
         uses: actions/upload-artifact@main
         with:
           name: test
-          path: ./*.AppImage
+          path: /home/runner/work/KikoPlay/
