--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
           wget https://github.com/linuxdeploy/linuxdeploy-plugin-qt/releases/download/continuous/linuxdeploy-plugin-qt-x86_64.AppImage
           chmod +x linuxdeploy*.AppImage
           sed -i 's!/usr/share/pixmaps/!!g' kikoplay.desktop
-      - run: ./linuxdeploy-x86_64.AppImage --appdir AppDir --plugin qt -e AppDir/usr/bin/KikoPlay -i kikoplay.png -d kikoplay.desktop
+      - run: ./linuxdeploy-x86_64.AppImage --appdir AppDir --plugin qt -e AppDir/usr/bin/KikoPlay -i res/images/kikoplay-4.png -d kikoplay.desktop
       - run: ls -al && rm linuxdeploy*.AppImage
 
       - name: Upload 
