--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,19 +4,25 @@ jobs:
   test:
     runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v2
-        with:
-          ref: '5c9234bce550cc29ca82552244dc109018388264'
       - run: |
           sudo apt update
           sudo apt install build-essential libfuse2 -y
           sudo apt install qtbase5-dev qt5-qmake libmpv-dev zlib1g-dev -y
-      - run: qmake build.pro
-      - run: make install INSTALL_ROOT=AppDir
-      - run: make -j $(nproc)
+      - run: |
+          wget https://github.com/moomiji/KikoPlay/suites/8523490833/artifacts/379925352
+          unzip *.zip
+          cd KikoPlay
+          wget https://github.com/linuxdeploy/linuxdeploy/releases/download/continuous/linuxdeploy-x86_64.AppImage
+          tsocks wget https://github.com/linuxdeploy/linuxdeploy-plugin-qt/releases/download/continuous/linuxdeploy-plugin-qt-x86_64.AppImage
+          chmod +x linuxdeploy*.AppImage
+          sed -i 's!/usr/share/pixmaps/!!g' kikoplay.desktop
+          cat kikoplay.desktop
 
-      - name: Upload 
+      - run: ./linuxdeploy-x86_64.AppImage --appdir AppDir --plugin qt -e AppDir/usr/bin/KikoPlay -d kikoplay.desktop -i res/images/kikoplay-4.png
+      - run: ls -al && rm linuxdeploy*.AppImage
+
+      - name: Upload
         uses: actions/upload-artifact@main
         with:
-          name: 1
+          name: 2
           path: /home/runner/work/KikoPlay/
