--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
           wget https://github.com/linuxdeploy/linuxdeploy/releases/download/continuous/linuxdeploy-x86_64.AppImage
           wget https://github.com/linuxdeploy/linuxdeploy-plugin-qt/releases/download/continuous/linuxdeploy-plugin-qt-x86_64.AppImage
           chmod +x linuxdeploy*.AppImage
-          sed -i 's!/usr/share/pixmaps/!!g' kikoplay.desktop
+          sed -i 's!/usr/share/pixmaps/kikoplay.png!kikoplay!g' kikoplay.desktop
           cat kikoplay.desktop
 
       - run: |
