--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
           sudo apt install qtbase5-dev qt5-qmake libmpv-dev zlib1g-dev -y
       - run: |
           wget https://github.com/moomiji/KikoPlay/releases/download/0.9.0/1.zip
-          unzip 1.zip
+          unzip 1.zip && rm 1.zip
           cd KikoPlay
           wget https://github.com/linuxdeploy/linuxdeploy/releases/download/continuous/linuxdeploy-x86_64.AppImage
           wget https://github.com/linuxdeploy/linuxdeploy-plugin-qt/releases/download/continuous/linuxdeploy-plugin-qt-x86_64.AppImage
@@ -22,12 +22,12 @@ jobs:
           cd KikoPlay
           cp -f kikoplay.desktop AppDir/usr/share/applications/kikoplay.desktop
           cp -f res/images/kikoplay-4.png AppDir/usr/share/pixmaps/kikoplay.png
-          ./linuxdeploy-x86_64.AppImage --appdir AppDir --plugin qt
+          ./linuxdeploy-x86_64.AppImage --appdir AppDir --plugin qt --output appimage
           rm linuxdeploy*.AppImage
-          ls -al 
+          find -name '*.AppImage'
 
       - name: Upload
         uses: actions/upload-artifact@main
         with:
           name: 2
-          path: /home/runner/work/KikoPlay/
+          path: /home/runner/work/KikoPlay/KikoPlay/*.AppImage
