--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,4 +30,4 @@ jobs:
         uses: actions/upload-artifact@main
         with:
           name: 2
-          path: /home/runner/work/KikoPlay/KikoPlay/*.AppImage
+          path: /home/runner/work/KikoPlay/KikoPlay/KikoPlay-x86_64.AppImage
