--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,8 @@ jobs:
           cd KikoPlay
           cp -f kikoplay.desktop AppDir/usr/share/applications/kikoplay.desktop
           cp -f res/images/kikoplay-4.png AppDir/usr/share/pixmaps/kikoplay.png
+          ./linuxdeploy-x86_64.AppImage --appdir AppDir --plugin qt
+          chmod +x AppDir/usr/bin/KikoPlay AppDir/apprun-hooks/linuxdeploy-plugin-qt-hook.sh 
           ./linuxdeploy-x86_64.AppImage --appdir AppDir --plugin qt --output appimage
           rm linuxdeploy*.AppImage
           find /home/runner/work/ -name '*.AppImage'
@@ -30,4 +32,4 @@ jobs:
         uses: actions/upload-artifact@main
         with:
           name: 2
-          path: /home/runner/work/
+          path: /home/runner/work/KikoPlay/KikoPlay/KikoPlay/KikoPlay-x86_64.AppImage
